kubernetes/management/registry/base/ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: registry
  name: ui
  labels:
    kalexlab.xyz/app: registry
    kalexlab.xyz/component: ui
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 8080
      protocol: TCP
  selector:
    kalexlab.xyz/app: registry
    kalexlab.xyz/component: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: registry
  name: ui
  labels:
    kalexlab.xyz/app: registry
    kalexlab.xyz/component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: registry
      kalexlab.xyz/component: ui
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: registry
        kalexlab.xyz/component: ui
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: ui
          image: "docker.io/joxit/docker-registry-ui:2"
          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              memory: 20Mi
              cpu: 5m
            limits:
              memory: 200Mi
              cpu: 100m

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            failureThreshold: 3
            periodSeconds: 30

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /etc/nginx
              name: nginx
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /usr/share/nginx/html
              name: nginx-html

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault

      enableServiceLinks: false
      automountServiceAccountToken: false

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
        - name: nginx
          emptyDir:
            sizeLimit: 1Gi
        - name: nginx-cache
          emptyDir:
            sizeLimit: 1Gi
        - name: nginx-html
          emptyDir:
            sizeLimit: 1Gi
